<resources>
    <string name="app_name">Nimingban</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="data_analysis">Data analysis</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="it_is_important">Important!!</string>
    <string name="crash_tip">The application crashed last time. Would you mind to send error message to the developer via e-mail to fix the bug?</string>
    <string name="cant_make_sure_image_save_location">It seems your picture saving location is not available. Set it in Settings to save pictures. </string>
    <string name="swipe_toolbar_hide_show">Swipe toolbar vertically to hide and show reply UI</string>
    <string name="swipe_right_open_menu">Swipe right for menu</string>
    <string name="swipe_left_open_forum_list">Swipe left for forum list</string>
    <string name="double_click_toolbar_refresh">Double click toolbar to refresh</string>
    <string name="get_it">Got it</string>
    <string name="click_eye_icon">Click an eye icon to hide/show the forum</string>
    <string name="modify_forum_title">Click a forum title to modify it</string>
    <string name="swipe_forum_remove">Swipe a forum to remove it</string>
    <string name="drag_four_bars_exchange">Drag four bars to exchange forums</string>
    <string name="click_refresh_icon_update_list">Click the refresh icon to update forum list</string>
    <string name="click_add_icon_add_forum">Click the add icon to add a custom forum</string>
    <string name="notice">Notice</string>
    <string name="thread">Thread</string>
    <string name="common_posts">Common threads</string>
    <string name="let_there_light">Let there be light</string>
    <string name="let_there_dark">Let there be dark</string>
    <string name="press_twice_exit">Press twice to exit</string>
    <string name="please_wait">Please wait</string>
    <string name="no_post">Thread not found</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="converting">Converting…</string>
    <string name="reply">Reply</string>
    <string name="go_to">Go to</string>
    <string name="go_to_error_out_of_range">Target page is out of range</string>
    <string name="lucky">Haha</string>
    <string name="go_to_post">Go to thread</string>
    <string name="keyword_empty">Keyword is empty</string>
    <string name="invalid_post_id">Thread id is not valid</string>
    <string name="not_found">Nobody here but us chickens</string>
    <string name="search_title">Search - %s</string>
    <string name="add_feed">Add feed</string>
    <string name="remove_feed">Remove feed</string>
    <string name="add_feed_successfully">Add feed successfully</string>
    <string name="add_feed_failed">Add feed failed</string>
    <string name="remove_feed_successfully">Remove feed successfully</string>
    <string name="remove_feed_failed">Remove feed failed</string>
    <string name="share">Share</string>
    <string name="open_in_other_app">Open in other app</string>
    <string name="feed">Feed</string>
    <string name="no_feed">There is no feed</string>
    <string name="feed_deleted">Feed deleted</string>
    <string name="search">Search</string>
    <string name="reply_to_comment">Reply to comment</string>
    <string name="copy_comment_text">Copy comment text</string>
    <string name="send_comment_text">Share comment text</string>
    <string name="report_comment">Report comment</string>
    <string name="select_image">Select a picture</string>
    <string name="text_to_image">Text to image</string>
    <string name="take_photo">Take a photo</string>
    <string name="ignore_post">Ignore this post</string>
    <string name="ignore_post_confirm_title">Are you sure want to ignore this post?</string>
    <string name="ignore_post_confirm_message">After ignored, you can access it from enter post id only.</string>
    <string name="ignore_post_confirm_message_strict">After ignored, you can\'t access these posts unless you restored all ignored posts.</string>
    <string name="ignore_post_message">This post has been ignored</string>
    <string name="comment_copied_clipboard">Copied to clipboard</string>
    <string name="cant_get_the_reference">Can\'t get the reference</string>
    <string name="show_thread">Show thread</string>
    <string name="rule">Rule</string>
    <string name="report">Report</string>
    <string name="report_tip">You will report it to the duty room</string>
    <string name="create_post">Post</string>
    <string name="cant_find_the_forum">Can\'t find the forum which id is %s</string>
    <string name="save_text_draft">Save as draft? </string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t save</string>
    <string name="create_text_image">Seems that your post contains offensive words. Convert the text to a image instead? </string>
    <string name="start_creating_post">Posting…</string>
    <string name="create_post_successfully">Posted successfully</string>
    <string name="reply_failed">Seems failed to reply. Your reply has been saved as draft. </string>
    <string name="start_reply">Replying…</string>
    <string name="reply_successfully">Replied successfully</string>
    <string name="create_post_failed">Seems failed to post. Your post has been saved as draft. </string>
    <string name="select_picture">Select picture</string>
    <string name="gallery">Gallery</string>
    <string name="image_search">Image Search</string>
    <string name="no_cookies">No cookies</string>
    <string name="no_cookies_ac">Seems that you don\'t have cookie of AC Nimingban. Get cookie now?</string>
    <string name="register">Register</string>
    <string name="add_cookies">Add cookies</string>
    <string name="i_dont_care">I don\'t care</string>
    <string name="getting_cookies">Trying to get Cookie…</string>
    <string name="got_cookies">Got it! </string>
    <string name="cant_get_cookies">Failed to get cookie. </string>
    <string name="em_timeout">Timeout</string>
    <string name="em_unknown_host">Unknown host</string>
    <string name="em_response_code">Unexpected response code: %d</string>
    <string name="em_redirection">Too many redirections</string>
    <string name="em_socket">Network error</string>
    <string name="em_unknown">Weird</string>
    <string name="em_cant_find_activity">Can\'t find activity</string>
    <string name="undo">Undo</string>
    <string name="draft">Draft</string>
    <string name="draft_copied_clipboard">Copied to clipboard. </string>
    <string name="no_draft">Your unsent posts will save here. </string>
    <string name="draft_deleted">Draft deleted. </string>
    <string name="record">Record</string>
    <string name="no_record">Your sent posts will save here. </string>
    <string name="record_deleted">Record deleted</string>
    <string name="from_the_future">From the future</string>
    <string name="just_now">Just now</string>
    <plurals name="some_minutes_ago">
        <item quantity="one">A minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="some_hours_ago">
        <item quantity="one">An hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <string name="yesterday">Yesterday</string>
    <string name="some_days_ago">%d days ago</string>
    <string name="display_settings_title">Display</string>
    <string name="config_settings_title">Config</string>
    <string name="info_settings_title">About</string>
    <string name="main_dark_theme">Dark theme</string>
    <string name="main_pretty_time">Show relative time</string>
    <string name="main_text_format">Font size and line spacing</string>
    <string name="main_dynamic_comments">Dynamic comments</string>
    <string name="main_dynamic_comments_summary_on">Show recent comments dynamically below thread content in list</string>
    <string name="main_dynamic_comments_summary_off">Don\'t show dynamic comments</string>
    <string name="main_fast_scroller">Show fast scroller</string>
    <string name="main_fast_scroller_summary_on">Show fast scroller in the right of a list</string>
    <string name="main_fast_scroller_summary_off">Don\'t show fast scroller</string>
    <string name="main_image_loading_strategy">Picture preload</string>
    <string name="main_image_loading_strategy_2">When Picture preload is not available…</string>
    <string name="main_image_loading_strategy_2_summary_off">Don\'t show the picture anyway</string>
    <string name="main_image_loading_strategy_2_summary_on">Show the picture button, and load the preview when long-clicking it</string>
    <string name="main_chaos_level">Chaos level</string>
    <string name="main_ac_cookies">Cookies</string>
    <string name="main_add_cookies">Add cookies</string>
    <string name="main_add_cookies_summary">Scan QR code or use WeChat to add cookies</string>
    <string name="main_save_cookies">Save cookies</string>
    <string name="main_save_cookies_summary">Save cookies to external storage</string>
    <string name="main_restore_cookies">Restore cookies</string>
    <string name="main_restore_cookies_summary">Restore cookies from a file in external storage</string>
    <string name="main_watermark">Watermark</string>
    <string name="main_watermark_summary_on">Show watermark in the image you upload</string>
    <string name="main_watermark_summary_off">Don\'t show watermark in the image you upload</string>
    <string name="main_feed_id">Feed id</string>
    <string name="main_save_image_auto">Save image when loaded</string>
    <string name="main_save_image_auto_summary_on">Save image to your storage as it loaded</string>
    <string name="main_save_image_auto_summary_off">Image will be saved only when you click the save button</string>
    <string name="main_image_save_location">Image save location</string>
    <string name="main_app_icon">App icon (Maybe reboot required)</string>
    <string name="main_strict_ignore_post_mode">Strict ignore post mode</string>
    <string name="main_strict_ignore_post_mode_summary_on">You can\'t access ignored posts anymore</string>
    <string name="main_strict_ignore_post_mode_summary_off">You still can access ignored posts using go to post id</string>
    <string name="main_restore_ignored_post">Restore all ignored posts</string>
    <string name="main_restore_ignored_post_summary">The posts you ignored will redisplayed</string>
    <string name="main_enable_customized_ac_host">Enable customized host</string>
    <string name="main_customized_ac_host">Customized host</string>
    <string name="main_analysis">Enable data analysis</string>
    <string name="main_about_analysis">About data analysis</string>
    <string name="main_author">Author</string>
    <string name="main_source">Source</string>
    <string name="main_source_summary" translatable="false">https://github.com/seven332/Nimingban</string>
    <string name="main_notice">NOTICE</string>
    <string name="main_version">Version</string>
    <string name="font_size">Font size</string>
    <string name="line_spacing">Line spacing</string>
    <string name="text_format_preview">the quick brown hippo jumps over the lazy monkey\nthe quick brown hippo jumps over the lazy monkey\nthe quick brown hippo jumps over the lazy monkey</string>
    <string name="sort_forums">Sort forums</string>
    <string name="image_search_google">Google</string>
    <string name="image_search_baidu">Baidu</string>
    <string name="image_search_sogou">Sogou</string>
    <string name="image_search_tineye">TinEye</string>
    <string name="image_search_whatanime">What Anime</string>
    <string name="image_search_saucenao">SauceNAO</string>
    <string name="image_search_iqdb">Iqdb</string>
    <string name="image_search_iqdb_3d">Iqdb 3D</string>
</resources>