<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="dark_theme"
        android:title="@string/main_dark_theme"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="pretty_time"
        android:title="@string/main_pretty_time"
        android:defaultValue="true"/>

    <Preference
        android:key="text_format"
        android:title="@string/main_text_format"/>

    <ListPreference
        android:key="image_loading_strategy"
        android:title="@string/main_image_loading_strategy"
        android:summary="%s"
        android:entries="@array/image_loading_strategy_entries"
        android:entryValues="@array/image_loading_strategy_entry_values"
        android:defaultValue="0"/>

    <SwitchPreference
        android:key="image_loading_strategy_2"
        android:title="@string/main_image_loading_strategy_2"
        android:summaryOff="@string/main_image_loading_strategy_2_summary_off"
        android:summaryOn="@string/main_image_loading_strategy_2_summary_on"
        android:defaultValue="false"/>

    <Preference
        android:key="ac_cookies"
        android:title="@string/main_ac_cookies"/>

    <Preference
        android:key="save_cookies"
        android:title="@string/main_save_cookies"
        android:summary="@string/main_save_cookies_summary"/>

    <Preference
        android:key="restore_cookies"
        android:title="@string/main_restore_cookies"
        android:summary="@string/main_restore_cookies_summary"/>

    <Preference
        android:key="feed_id"
        android:title="@string/main_feed_id"/>

    <Preference
        android:key="image_save_location"
        android:title="@string/main_image_save_location"/>

    <SwitchPreference
        android:key="analysis"
        android:title="@string/main_analysis"/>

    <Preference
        android:key="author"
        android:title="@string/main_author"/>

    <Preference
        android:key="source"
        android:title="@string/main_source"
        android:summary="@string/main_source_summary"/>

</PreferenceScreen>
