<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="ac_cookies"
        android:title="@string/main_ac_cookies"/>

    <Preference
        android:key="add_cookies"
        android:title="@string/main_add_cookies"
        android:summary="@string/main_add_cookies_summary"/>

    <Preference
        android:key="save_cookies"
        android:title="@string/main_save_cookies"
        android:summary="@string/main_save_cookies_summary"/>

    <Preference
        android:key="restore_cookies"
        android:title="@string/main_restore_cookies"
        android:summary="@string/main_restore_cookies_summary"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="watermark"
        android:title="@string/main_watermark"
        app:summaryOn="@string/main_watermark_summary_on"
        app:summaryOff="@string/main_watermark_summary_off"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <Preference
        android:key="feed_id"
        android:title="@string/main_feed_id"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="save_image_auto"
        android:title="@string/main_save_image_auto"
        app:summaryOn="@string/main_save_image_auto_summary_on"
        app:summaryOff="@string/main_save_image_auto_summary_off"
        android:defaultValue="false"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <Preference
        android:key="image_save_location"
        android:title="@string/main_image_save_location"/>

    <ListPreference
        android:key="chaos_level"
        android:title="@string/main_chaos_level"
        android:summary="%s"
        android:entries="@array/chaos_level_entries"
        android:entryValues="@array/chaos_level_entry_values"
        android:defaultValue="0"/>

    <com.hippo.preference.IconListPreference
        style="?android:attr/preferenceStyle"
        android:key="app_icon"
        android:title="@string/main_app_icon"
        android:summary="%s"
        android:entries="@array/app_icon_entries"
        android:entryValues="@array/app_icon_entry_values"
        app:entryIcons="@array/app_icon_entry_icons"
        android:defaultValue="0"
        android:widgetLayout="@layout/preference_widget_icon_list"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="strict_ignore_post_mode"
        android:title="@string/main_strict_ignore_post_mode"
        app:summaryOn="@string/main_strict_ignore_post_mode_summary_on"
        app:summaryOff="@string/main_strict_ignore_post_mode_summary_off"
        android:defaultValue="false"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <Preference
        android:key="restore_ignored_posts"
        android:title="@string/main_restore_ignored_post"
        android:summary="@string/main_restore_ignored_post_summary"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="enable_customized_ac_host"
        android:title="@string/main_enable_customized_ac_host"
        android:defaultValue="false"
        android:widgetLayout="@layout/preference_widget_fixed_switch" />

    <com.hippo.nimingban.preference.HostPreference
        style="?android:attr/preferenceStyle"
        android:key="customized_ac_host"
        android:title="@string/main_customized_ac_host"
        android:dependency="enable_customized_ac_host"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="analysis"
        android:title="@string/main_analysis"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <Preference
        android:key="about_analysis"
        android:title="@string/main_about_analysis"/>

</PreferenceScreen>
