<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/v_content_save_dark_x24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/v_share_dark_x24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/v_refresh_dark_x24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/image_search"
        android:icon="@drawable/v_magnify_dark_x24"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/action_search_google"
                android:title="@string/image_search_google"/>

            <item
                android:id="@+id/action_search_baidu"
                android:title="@string/image_search_baidu"/>

            <item
                android:id="@+id/action_search_sogou"
                android:title="@string/image_search_sogou"/>

            <item
                android:id="@+id/action_search_tineye"
                android:title="@string/image_search_tineye"/>

            <item
                android:id="@+id/action_search_whatanime"
                android:title="@string/image_search_whatanime"/>

            <item
                android:id="@+id/action_search_saucenao"
                android:title="@string/image_search_saucenao"/>

            <item
                android:id="@+id/action_search_iqdb"
                android:title="@string/image_search_iqdb"/>

            <item
                android:id="@+id/action_search_iqdb_3d"
                android:title="@string/image_search_iqdb_3d"/>

        </menu>
    </item>

</menu>
