<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="pretty_time"
        android:title="@string/main_pretty_time"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <Preference
        android:key="text_format"
        android:title="@string/main_text_format"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="dynamic_comments"
        android:title="@string/main_dynamic_comments"
        app:summaryOn="@string/main_dynamic_comments_summary_on"
        app:summaryOff="@string/main_dynamic_comments_summary_off"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="fast_scroller"
        android:title="@string/main_fast_scroller"
        app:summaryOn="@string/main_fast_scroller_summary_on"
        app:summaryOff="@string/main_fast_scroller_summary_off"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

    <ListPreference
        android:key="image_loading_strategy"
        android:title="@string/main_image_loading_strategy"
        android:summary="%s"
        android:entries="@array/image_loading_strategy_entries"
        android:entryValues="@array/image_loading_strategy_entry_values"
        android:defaultValue="0"/>

    <com.hippo.preference.FixedSwitchPreference
        style="?android:attr/preferenceStyle"
        android:key="image_loading_strategy_2"
        android:title="@string/main_image_loading_strategy_2"
        app:summaryOff="@string/main_image_loading_strategy_2_summary_off"
        app:summaryOn="@string/main_image_loading_strategy_2_summary_on"
        android:defaultValue="false"
        android:widgetLayout="@layout/preference_widget_fixed_switch"/>

</PreferenceScreen>
