<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reply"
        android:title="@string/reply"
        android:icon="@drawable/v_reply_dark_x24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_go_to"
        android:title="@string/go_to"
        android:icon="@drawable/v_go_to_dark_x24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_feed"
        android:title="@string/add_feed"
        android:icon="@drawable/v_board_add_dark_x24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_remove_feed"
        android:title="@string/remove_feed"
        android:icon="@drawable/v_board_remove_dark_x24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/v_share_dark_x24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_in_other_app"
        android:title="@string/open_in_other_app"
        android:icon="@drawable/v_google_chrome_dark_x24"
        app:showAsAction="never"/>

</menu>
