<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create_post"
        android:title="@string/create_post"
        android:icon="@drawable/v_message_add_outline_dark_x24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_rule"
        android:title="@string/rule"
        android:icon="@drawable/v_notice_outline_dark_x24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_notice"
        android:title="@string/notice"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_forums"
        android:title="@string/sort_forums"
        android:icon="@drawable/v_sort_dark_x24"
        app:showAsAction="ifRoom"/>

</menu>
