<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.hippo.nimingban.ui.SettingsActivity$DisplayFragment"
        android:title="@string/display_settings_title"
        android:icon="@drawable/ic_cellphone_android_primary_x24"/>

    <header
        android:fragment="com.hippo.nimingban.ui.SettingsActivity$ConfigFragment"
        android:title="@string/config_settings_title"
        android:icon="@drawable/ic_spanner_primary_x24"/>

    <header
        android:fragment="com.hippo.nimingban.ui.SettingsActivity$InfoFragment"
        android:title="@string/info_settings_title"
        android:icon="@drawable/ic_information_primary_x24"/>

</preference-headers>
